# DNS-Leaker

./: README.md  pyproject.toml  requirements.txt
dnsleaker/: __main__.py  api.py
